<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tomato Mobile</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_open_new_page">New Page Baby</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_activity_device_screen">DeviceScreen</string>
    <string name="title_activity_advanced_config">Advanced Configuration</string>
    <string name="title_activity_basic_configuration">Basic Configuration</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="login_username">Username:</string>
    <string name="login_password">Password:</string>
    <string name="login_ip">IP Address:</string>
    <string name="login_welcome">Welcome to Tomato Mobile. Please login.</string>
    <string name="router_page_intro">Router details. Click the button to update.</string>
    <string name="router_page_name">Router Name:</string>
    <string name="router_page_mac">MAC Address:</string>
    <string name="router_page_ip">IP Address:</string>
    <string name="router_page_model">Model No.:</string>
    <string name="router_page_uptime">Router Uptime:</string>
    <string name="router_page_ram">RAM Usage:</string>
    <string name="router_title">Router Screen</string>
    <string name="router_imagebutton_contentdescription">Router Image Button for Router Information.</string>
    <string name="devices_imagebutton_contentdescription">Button Image for Devices</string>
    <string name="groups_imagebutton_contentdescription">Button Image for Groups</string>
    <string name="basic_imagebutton_contentdescription">Button Image for Basic Configuration</string>
    <string name="advconfig_imagebutton_contentdescription">Button Image for Advanced Configuration</string>
    <string name="mainscr_AppTitle">Tomato Router Mobile</string>
    <string name="title_activity_groups">Groups</string>
    <string name="title_activity_new_group">NewGroupActivity</string>
    <string-array name="time_array">
        <item value="0">12:00 AM</item>
        <item value="15">12:15 AM</item>
        <item value="30">12:30 AM</item>
        <item value="45">12:45 AM</item>
        <item value="60">1:00 AM</item>
        <item value="75">1:15 AM</item>
        <item value="90">1:30 AM</item>
        <item value="105">1:45 AM</item>
        <item value="120">2:00 AM</item>
        <item value="135">2:15 AM</item>
        <item value="150">2:30 AM</item>
        <item value="165">2:45 AM</item>
        <item value="180">3:00 AM</item>
        <item value="195">3:15 AM</item>
        <item value="210">3:30 AM</item>
        <item value="225">3:45 AM</item>
        <item value="240">4:00 AM</item>
        <item value="255">4:15 AM</item>
        <item value="270">4:30 AM</item>
        <item value="285">4:45 AM</item>
        <item value="300">5:00 AM</item>
        <item value="315">5:15 AM</item>
        <item value="330">5:30 AM</item>
        <item value="345">5:45 AM</item>
        <item value="360">6:00 AM</item>
        <item value="375">6:15 AM</item>
        <item value="390">6:30 AM</item>
        <item value="405">6:45 AM</item>
        <item value="420">7:00 AM</item>
        <item value="435">7:15 AM</item>
        <item value="450">7:30 AM</item>
        <item value="465">7:45 AM</item>
        <item value="480">8:00 AM</item>
        <item value="495">8:15 AM</item>
        <item value="510">8:30 AM</item>
        <item value="525">8:45 AM</item>
        <item value="540">9:00 AM</item>
        <item value="555">9:15 AM</item>
        <item value="570">9:30 AM</item>
        <item value="585">9:45 AM</item>
        <item value="600">10:00 AM</item>
        <item value="615">10:15 AM</item>
        <item value="630">10:30 AM</item>
        <item value="645">10:45 AM</item>
        <item value="660">11:00 AM</item>
        <item value="675">11:15 AM</item>
        <item value="690">11:30 AM</item>
        <item value="705">11:45 AM</item>
        <item value="720">12:00 PM</item>
        <item value="735">12:15 PM</item>
        <item value="750">12:30 PM</item>
        <item value="765">12:45 PM</item>
        <item value="780">1:00 PM</item>
        <item value="795">1:15 PM</item>
        <item value="810">1:30 PM</item>
        <item value="825">1:45 PM</item>
        <item value="840">2:00 PM</item>
        <item value="855">2:15 PM</item>
        <item value="870">2:30 PM</item>
        <item value="885">2:45 PM</item>
        <item value="900">3:00 PM</item>
        <item value="915">3:15 PM</item>
        <item value="930">3:30 PM</item>
        <item value="945">3:45 PM</item>
        <item value="960">4:00 PM</item>
        <item value="975">4:15 PM</item>
        <item value="990">4:30 PM</item>
        <item value="1005">4:45 PM</item>
        <item value="1020">5:00 PM</item>
        <item value="1035">5:15 PM</item>
        <item value="1050">5:30 PM</item>
        <item value="1065">5:45 PM</item>
        <item value="1080">6:00 PM</item>
        <item value="1095">6:15 PM</item>
        <item value="1110">6:30 PM</item>
        <item value="1125">6:45 PM</item>
        <item value="1140">7:00 PM</item>
        <item value="1155">7:15 PM</item>
        <item value="1170">7:30 PM</item>
        <item value="1185">7:45 PM</item>
        <item value="1200">8:00 PM</item>
        <item value="1215">8:15 PM</item>
        <item value="1230">8:30 PM</item>
        <item value="1245">8:45 PM</item>
        <item value="1260">9:00 PM</item>
        <item value="1275">9:15 PM</item>
        <item value="1290">9:30 PM</item>
        <item value="1305">9:45 PM</item>
        <item value="1320" selected="">10:00 PM</item>
        <item value="1335">10:15 PM</item>
        <item value="1350">10:30 PM</item>
        <item value="1365">10:45 PM</item>
        <item value="1380">11:00 PM</item>
        <item value="1395">11:15 PM</item>
        <item value="1410">11:30 PM</item>
        <item value="1425">11:45 PM</item>
    </string-array>

</resources>