<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="Tomato Router Mobile"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:textSize="32dp"
        android:padding="50px" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight=".2">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/routerImgBtn"
            android:clickable="true"
            android:background="@drawable/router_icon_flat"
            android:layout_marginLeft="90dp"
            android:contentDescription="@string/router_imagebutton_contentdescription" />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/deviceImgBtn"
            android:clickable="true"
            android:background="@drawable/devices_icon_flat"
            android:layout_toRightOf="@+id/routerImgBtn"
            android:focusable="true"
            android:contentDescription="@string/devices_imagebutton_contentdescription" />
    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight=".2">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="90dp"
            android:background="@drawable/basic_icon_flat"
            android:id="@+id/basicImgBtn"
            android:contentDescription="@string/basic_imagebutton_contentdescription" />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/advImgBtn"
            android:background="@drawable/advanced_icon_flat"
            android:layout_toRightOf="@id/basicImgBtn"
            android:focusableInTouchMode="false"
            android:contentDescription="@string/advconfig_imagebutton_contentdescription" />
    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight=".2">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="90dp"
            android:background="@drawable/groups_icon_flat"
            android:id="@+id/groupsImgBtn"
            android:contentDescription="@string/groups_imagebutton_contentdescription" />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/profilesImgBtn"
            android:layout_toRightOf="@+id/groupsImgBtn"/>
    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight=".2">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageButton"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</LinearLayout>