<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background_grad"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.somethingprofane.tomato.MainScreen">
    <TextView
        android:text="@string/login_welcome"
        android:id="@+id/TextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="10pt"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:gravity="center">
    </TextView>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_below="@id/TextView">



        <TextView
            android:text="@string/login_username"
            android:id="@+id/main_login_username_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="9pt"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_alignParentTop="true">
        </TextView>

        <EditText
            android:id="@+id/login_main_usrname_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:inputType="textPersonName"
            android:text="root"
            android:layout_toRightOf="@+id/main_login_username_lable"/>

        <TextView
            android:text="Password: "
            android:id="@+id/main_login_passwd_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="9pt"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_below="@+id/main_login_username_lable"
            android:singleLine="false">
        </TextView>

        <EditText
            android:id="@+id/login_main_passwd_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_toRightOf="@+id/main_login_passwd_label"
            android:layout_below="@+id/login_main_usrname_text"
            android:inputType="textPassword"
            android:text="admin"/>

        <TextView
            android:text="@string/login_ip"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="9pt"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_below="@+id/main_login_passwd_label">
        </TextView>

        <EditText
            android:id="@+id/login_main_ip_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_toRightOf="@+id/textView"
            android:layout_below="@+id/login_main_passwd_text"
            android:text="192.168.1.1"/>

        <Button
            android:text="Login"
            android:id="@+id/login_main_loginbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:layout_below="@+id/textView"
            android:layout_alignParentRight="true"

            style="@style/ButtonText"/>

    </RelativeLayout>

</RelativeLayout>

