<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background_grad"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.somethingprofane.tomato.MainScreen">
    <TextView
        android:text="Router details. Click the button to update."
        android:id="@+id/TextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="10pt"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:gravity="center">
    </TextView>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_below="@id/TextView">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="1">

            <TableRow>
                <TextView
                    android:text="Router Name:"
                    android:id="@+id/router_main_labelRouter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="9pt"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_alignParentTop="true">
                </TextView>

                <EditText
                    android:id="@+id/router_main_txtRouter"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:layout_toRightOf="@+id/router_main_labelRouter"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="MAC Address:"
                    android:id="@+id/router_main_labelMAC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="9pt"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_below="@+id/router_main_labelRouter">
                </TextView>

                <EditText
                    android:id="@+id/router_main_txtMAC"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_toRightOf="@+id/router_main_labelMAC"
                    android:layout_below="@+id/router_main_txtRouter"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="IP Address:"
                    android:id="@+id/router_main_labelIP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="9pt"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_below="@+id/router_main_labelMAC">
                </TextView>

                <EditText
                    android:id="@+id/trouter_main_txtIP"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_toRightOf="@+id/router_main_labelIP"
                    android:layout_below="@+id/router_main_txtMAC"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/router_page_model"
                    android:id="@+id/router_main_labelModel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="9pt"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_below="@+id/router_main_labelIP">
                </TextView>

                <EditText
                    android:id="@+id/router_main_txtModel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_toRightOf="@+id/router_main_labelModel"
                    android:layout_below="@+id/trouter_main_txtIP"/>

            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/router_page_uptime"
                    android:id="@+id/router_main_labelUptime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="9pt"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_below="@+id/router_main_labelModel">
                </TextView>

                <EditText
                    android:id="@+id/router_main_txtUptime"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_toRightOf="@+id/router_main_labelUptime"
                    android:layout_below="@+id/router_main_txtModel"/>

            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/router_page_ram"
                    android:id="@+id/router_main_labelRAM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="9pt"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_below="@+id/router_main_labelUptime">
                </TextView>

                <EditText
                    android:id="@+id/router_main_txtRAM"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_toRightOf="@+id/router_main_labelRAM"
                    android:layout_below="@+id/router_main_txtUptime"/>

            </TableRow>
            <Button
                android:text="Update"
                android:id="@+id/buttonSubmit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/gradient"
                android:layout_below="@string/router_page_ram"
                android:layout_alignParentBottom="true"

                style="@style/ButtonText"/>

        </TableLayout>

    </RelativeLayout>



</LinearLayout>
